@@ -76,4 +76,7 @@
 /* Define to 1 if unsigned long is 64 bits. */
 #undef _XSERVER64
 
+/* Building vgahw module */
+#undef WITH_VGAHW
+
 #endif /* _XORG_CONFIG_H_ */
