@@ -4,6 +4,11 @@
 	Put DMX AC_CONDITIONALS at the top level, since they must always be
 	called.
 
+	* configure.ac:
+	* include/xorg-config.h.in:
+	* include/xorg-server.h.in:
+	Since we build vgahw unconditionally, always define WITH_VGAHW.
+
 2005-09-09  Jürg Billeter  <j@bitron.ch>
 
 	* configure.ac: use RGB_DB not RGB_PATH as that's what it's looking for
